@@ -1,6 +1,7 @@
 2010-04-11 MA Yue <velly.empire@gmail.com>
 
     * Add a new icon for "Ailurus quick start"
+    * Add game 'World of Padman'
 
 2010-04-11 CHEN Yangyang <skabyy@gmail.com>
 
